[UPDATE] modified swagger description, moved logic to hide status for non auth to model serialization instead of controller
